--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,19 @@
 ^psborrow2\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
+^renv$
+^renv\.lock$
+CODE_OF_CONDUCT.md
+SECURITY.md
+^.*\.Rproj$
+^\.Rproj\.user$
+^_pkgdown\.yml$
+^vignettes/hello\.Rmd$
+^docs$
+^\.github$
+README.*
+^\.lintr$
+^staged_dependencies\.yaml$
+coverage.*
+^\.pre-commit-config\.yaml$
+^codemeta\.json$
