--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
-.Rproj.user
-.Rhistory
+.DS_Store
+.httr-oauth
+.project
 .RData
+.Rhistory
+.Rproj.user
 .Ruserdata
+.settings/**
+*.html
+*.Rcheck
+*.rprof
+*.sas.txt
+*~
+/.project
+devel/*
+doc
+docs
+inst/outputs/*
+logs
+Meta
+packrat/lib*/
+temp
+temp_w
+templates/
+tmp.*
+vignettes/*.html
+vignettes/*.md
+vignettes/*.R
+coverage.*
+.vscode/
