--- a/.github/workflows/licenses.yaml
+++ b/.github/workflows/licenses.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - pre-release
+      - develop
   pull_request:
     types:
       - opened
@@ -14,6 +15,7 @@ on:
     branches:
       - main
       - pre-release
+      - develop
   workflow_dispatch:
   workflow_call:
 
