--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Depends:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Imports:
-   cmdstanr
+   cmdstanr,
+   checkmate
 Suggests:
    testthat (>= 3.0)
 Remotes:
