--- a/.github/workflows/build-check-install.yaml
+++ b/.github/workflows/build-check-install.yaml
@@ -69,6 +69,27 @@ jobs:
       image: ${{ matrix.config.image }}:${{ matrix.config.tag }}
 
     steps:
+      - name: cmdstan env vars
+        run: |
+          echo "CMDSTAN_PATH=${HOME}/.cmdstan" >> $GITHUB_ENV
+          echo "CMDSTAN_VERSION=2.29.2" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Cache cmdstan
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.CMDSTAN_PATH }}
+          key: ${{ runner.os }}-cmdstan-${{ env.CMDSTAN_VERSION }}
+          restore-keys: ${{ runner.os }}-cmdstan-
+
+      - name: Install cmdstan
+        run: |
+          remotes::install_github("stan-dev/cmdstanr@v0.5.2", upgrade = FALSE)
+          version <- Sys.getenv("CMDSTAN_VERSION")
+          url <- sprintf("https://github.com/stan-dev/cmdstan/releases/download/v%s/cmdstan-%s.tar.gz", version, version)
+          cmdstanr::install_cmdstan(cores = 2, release_url = url)
+        shell: Rscript {0}
+
       - name: Get branch names 🌿
         id: branch-name
         uses: tj-actions/branch-names@v5
