--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -16,7 +16,6 @@ on:
     branches:
       - main
       - pre-release
-      - develop
   workflow_dispatch:
   workflow_call:
     inputs:
@@ -51,6 +50,31 @@ jobs:
       packages: write
       deployments: write
     steps:
+      - name: Set environment vars for cmdstan
+        run: |
+          echo "CMDSTAN_PATH=${HOME}/.cmdstan" >> $GITHUB_ENV
+          echo "CMDSTAN_VERSION=2.29.2" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Cache cmdstan installation
+        uses: actions/cache@v3
+        id: cache-cmdstan
+        with:
+          path: ${{ env.CMDSTAN_PATH }}
+          key: ${{ runner.os }}-cmdstan-${{ env.CMDSTAN_VERSION }}
+          restore-keys: ${{ runner.os }}-cmdstan-
+
+      - name: Install cmdstan
+        if: steps.cache-cmdstan.outputs.cache-hit != 'true'
+        run: |
+          install.packages("cmdstanr", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
+          version <- Sys.getenv("CMDSTAN_VERSION")
+          url <- sprintf("https://github.com/stan-dev/cmdstan/releases/download/v%s/cmdstan-%s.tar.gz", version, version)
+          cmdstanr::install_cmdstan(cores = 2, release_url = url)
+        shell: Rscript {0}
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Checkout repo 🛎
         uses: actions/checkout@v3
 
