--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ SystemRequirements: cmdstan
 Collate: 
     'prior.R'
     'bernoulli_prior.R'
+    'beta_prior.R'
     'cauchy_prior.R'
     'cmdstan.R'
     'hello.R'
