--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cauchy_prior)
 export(check_cmdstanr)
 export(hello)
 export(normal_prior)
+export(poisson_prior)
 export(uniform_prior)
 import(checkmate)
 import(cmdstanr)
