--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bernoulli_prior)
 export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(exp_surv_dist)
 export(hello)
 export(normal_prior)
 export(poisson_prior)
