--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,8 +53,10 @@ Collate:
     'cmdstan.R'
     'surv_dist.R'
     'exp_surv_dist.R'
+    'exponential_prior.R'
     'hello.R'
     'normal_prior.R'
     'package.R'
     'poisson_prior.R'
     'uniform_prior.R'
+    'weib_ph_surv_dist.R'
