--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
 export(exp_surv_dist)
+export(exponential_prior)
 export(hello)
 export(normal_prior)
 export(poisson_prior)
 export(uniform_prior)
+export(weib_ph_surv_dist)
 import(checkmate)
 import(cmdstanr)
