--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(exponential_prior)
 export(hello)
 export(normal_prior)
 export(poisson_prior)
+export(set_covariates)
 export(uniform_prior)
 export(weib_ph_surv_dist)
 import(checkmate)
