--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,5 +58,6 @@ Collate:
     'normal_prior.R'
     'package.R'
     'poisson_prior.R'
+    'set_covariates.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
