--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,8 @@ Collate:
     'beta_prior.R'
     'cauchy_prior.R'
     'cmdstan.R'
-    'surv_dist.R'
+    'create_analysis_obj.R'
+    'outcome.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'hello.R'
@@ -59,5 +60,6 @@ Collate:
     'package.R'
     'poisson_prior.R'
     'set_covariates.R'
+    'set_outcome.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
