set_outcome wip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(hello)
 export(normal_prior)
 export(poisson_prior)
 export(set_covariates)
+export(set_outcome)
 export(uniform_prior)
 export(weib_ph_surv_dist)
+exportMethods(set_outcome)
 import(checkmate)
 import(cmdstanr)
