refactor a bit, set_borrowing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,19 +46,22 @@ Remotes:
 Language: en-US
 SystemRequirements: cmdstan
 Collate: 
-    'prior.R'
+    'prior_class.R'
     'bernoulli_prior.R'
     'beta_prior.R'
+    'borrowing_class.R'
     'cauchy_prior.R'
     'cmdstan.R'
+    'covariate_class.R'
     'create_analysis_obj.R'
-    'outcome.R'
+    'outcome_class.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'hello.R'
     'normal_prior.R'
     'package.R'
     'poisson_prior.R'
+    'set_borrowing.R'
     'set_covariates.R'
     'set_outcome.R'
     'uniform_prior.R'
