--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(exponential_prior)
 export(hello)
 export(normal_prior)
 export(poisson_prior)
+export(set_borrowing)
 export(set_covariates)
 export(set_outcome)
 export(uniform_prior)
