--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(poisson_prior)
 export(set_borrowing)
 export(set_covariates)
 export(set_outcome)
+export(set_treatment_arms)
 export(uniform_prior)
 export(weib_ph_surv_dist)
 exportMethods(set_outcome)
