wip analysis_class objects

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,24 +47,25 @@ Language: en-US
 SystemRequirements: cmdstan
 Collate: 
     'prior_class.R'
+    'normal_prior.R'
+    'treatment_class.R'
+    'borrowing_class.R'
+    'outcome_class.R'
+    'covariate_class.R'
+    'analysis_class.R'
     'bernoulli_prior.R'
     'beta_prior.R'
-    'borrowing_class.R'
     'cauchy_prior.R'
     'cmdstan.R'
-    'covariate_class.R'
     'create_analysis_obj.R'
-    'outcome_class.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'hello.R'
-    'normal_prior.R'
     'package.R'
     'poisson_prior.R'
     'set_borrowing.R'
     'set_covariates.R'
     'set_outcome.R'
-    'treatment_class.R'
     'set_treatment_arms.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
