--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bernoulli_prior)
 export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(hello)
