--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(hello)
+export(mcmc_sample)
 export(normal_prior)
 export(poisson_prior)
 export(set_borrowing)
