--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,9 @@ Collate:
     'create_analysis_obj.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
+    'gamma_prior.R'
     'hello.R'
+    'logistic_bin_endpoint.R'
     'mcmc_sample.R'
     'package.R'
     'poisson_prior.R'
