--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(check_cmdstanr)
 export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
+export(gamma_prior)
 export(hello)
+export(logistic_bin_endpoint)
 export(mcmc_sample)
 export(normal_prior)
 export(poisson_prior)
