--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,13 @@
 # R specific hooks: https://github.com/lorenzwalthert/precommit
 repos:
   - repo: https://github.com/lorenzwalthert/precommit
-    rev: v0.2.2.9015
+    rev: v0.3.2
     hooks:
       - id: style-files
-        args: [--style_pkg=styler, --style_fun=tidyverse_style]
+        args: [--indent_by=3]
       - id: roxygenize
         additional_dependencies:
-          - plumber
-          - shiny
+          - knitr
       # codemeta must be above use-tidy-description when both are used
       # -   id: codemeta-description-updated
       - id: use-tidy-description
