--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
-export(hello)
 export(logistic_bin_endpoint)
 export(mcmc_sample)
 export(normal_prior)
@@ -22,3 +21,4 @@ export(weib_ph_surv_dist)
 exportMethods(set_outcome)
 import(checkmate)
 import(cmdstanr)
+import(methods)
