--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,34 +3,34 @@ Title: Bayesian Dynamic Borrowing Simulation Study and Analysis
 Version: 0.0.0.9000
 Authors@R: c(
    person(
-      given = "Matt", 
-      family = "Secrest", 
-      role = c("cre"), 
+      given = "Matt",
+      family = "Secrest",
+      role = c("cre"),
       email = "secrestm@gene.com"
       ),
    person(
-      given = "Isaac", 
-      family = "Gravestock", 
-      role = c("aut"), 
+      given = "Isaac",
+      family = "Gravestock",
+      role = c("aut"),
       email = "isaac.gravestock@roche.com"
       ),
    person(
-      given = "Craig", 
+      given = "Craig",
       family = "Gower-Page",
       role = c("ctb"),
       email = "craig.gower-page@roche.com"
       )
    )
 Description: An R package for complex, innovative trial designs using
-   Bayesian dynamic borrowing (BDB). 'psborrow' has two main goals: 
-   First, facilitate simulation studies that compare different borrowing 
-   parameters (e.g. full borrowing, no borrowing, dynamic borrowing) and 
-   other trial and borrowing characteristics (e.g. sample size, covariates) in 
+   Bayesian dynamic borrowing (BDB). 'psborrow' has two main goals:
+   First, facilitate simulation studies that compare different borrowing
+   parameters (e.g. full borrowing, no borrowing, dynamic borrowing) and
+   other trial and borrowing characteristics (e.g. sample size, covariates) in
    a unified way; and second, provide a user-friendly interface for applying BDB
    on the study results handles the MCMC sampling on behalf of the user.
 License: Apache License (>= 2)
 Encoding: UTF-8
-Depends: 
+Depends:
     R (>= 3.5.0)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
@@ -38,7 +38,8 @@ Imports:
    cmdstanr,
    checkmate,
    glue,
-   methods
+   methods,
+   stats
 Suggests:
    testthat (>= 3.0),
    xml2
@@ -46,7 +47,7 @@ Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
 SystemRequirements: cmdstan
-Collate: 
+Collate:
     'prior_class.R'
     'normal_prior.R'
     'treatment_class.R'
@@ -62,7 +63,6 @@ Collate:
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
-    'hello.R'
     'logistic_bin_endpoint.R'
     'mcmc_sample.R'
     'package.R'
