--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(bernoulli_prior)
 export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(exponential_prior)
+export(gamma_prior)
 export(hello)
 export(normal_prior)
 export(poisson_prior)
