--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,7 @@ export(hello)
 export(normal_prior)
 export(poisson_prior)
 export(uniform_prior)
+exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
+importFrom(methods,new)
