new prior distributions (#18)
* new prior distributions

* exponential
* gamma

updated priors
improved tests

* styler

* spelling

* add some docs

* add links to stan reference

* style

* Apply suggestions from code review

Co-authored-by: gravesti <83659704+gravesti@users.noreply.github.com>

* styler

Co-authored-by: gravesti <isaac.gravestock@roche.com>
Co-authored-by: gravesti <83659704+gravesti@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ export(bernoulli_prior)
 export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(exponential_prior)
+export(gamma_prior)
 export(hello)
 export(normal_prior)
 export(poisson_prior)
 export(uniform_prior)
+exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
+importFrom(methods,new)
