--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,18 @@ export(bernoulli_prior)
 export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(hello)
+export(logistic_bin_endpoint)
 export(normal_prior)
 export(poisson_prior)
+export(set_outcome)
 export(uniform_prior)
+export(weib_ph_surv_dist)
 exportClasses(Prior)
+exportMethods(set_outcome)
 import(checkmate)
 import(cmdstanr)
 importFrom(methods,new)
