--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,10 +52,15 @@ Collate:
     'beta_prior.R'
     'cauchy_prior.R'
     'cmdstan.R'
+    'outcome_class.R'
+    'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
     'hello.R'
+    'logistic_bin_endpoint.R'
     'normal_prior.R'
     'package.R'
     'poisson_prior.R'
+    'set_outcome.R'
     'uniform_prior.R'
+    'weib_ph_surv_dist.R'
