--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,7 @@ Collate:
     'exponential_prior.R'
     'gamma_prior.R'
     'hello.R'
-    'logistic_bin_endpoint.R'
+    'logistic_bin_outcome.R'
     'normal_prior.R'
     'package.R'
     'poisson_prior.R'
