--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(hello)
-export(logistic_bin_endpoint)
+export(logistic_bin_outcome)
 export(normal_prior)
 export(poisson_prior)
 export(set_outcome)
