--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,22 +48,26 @@ Language: en-US
 SystemRequirements: cmdstan
 Collate:
     'prior_class.R'
+    'normal_prior.R'
+    'treatment_class.R'
+    'borrowing_class.R'
+    'outcome_class.R'
+    'covariate_class.R'
+    'analysis_class.R'
     'bernoulli_prior.R'
     'beta_prior.R'
     'cauchy_prior.R'
     'cmdstan.R'
-    'outcome_class.R'
+    'create_analysis_obj.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
-    'hello.R'
     'logistic_bin_outcome.R'
-    'normal_prior.R'
+    'mcmc_sample.R'
     'package.R'
     'poisson_prior.R'
     'set_borrowing.R'
     'set_covariates.R'
-    'set_outcome.R'
     'set_treatment_arms.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
