--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(bernoulli_prior)
 export(beta_prior)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(logistic_bin_outcome)
+export(mcmc_sample)
 export(normal_prior)
 export(poisson_prior)
 export(set_borrowing)
