Simple summary methods for priors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,12 @@ export(exponential_prior)
 export(gamma_prior)
 export(hello)
 export(normal_prior)
+export(plot_pdf)
+export(plot_pmf)
 export(poisson_prior)
 export(uniform_prior)
 exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
 importFrom(methods,new)
+importFrom(methods,show)
