--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,9 @@ Imports:
    cmdstanr,
    checkmate,
    glue,
-   methods
+   methods,
+   stats,
+   graphics
 Suggests:
    testthat (>= 3.0),
    xml2
@@ -55,6 +57,7 @@ Collate:
     'exponential_prior.R'
     'gamma_prior.R'
     'hello.R'
+    'helpers.R'
     'normal_prior.R'
     'package.R'
     'poisson_prior.R'
