--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,8 @@ Language: en-US
 SystemRequirements: cmdstan
 Collate:
     'prior_class.R'
+    'covariate_class.R'
+    'add_covariates.R'
     'bernoulli_prior.R'
     'beta_prior.R'
     'cauchy_prior.R'
