--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(gamma_prior)
 export(logistic_bin_outcome)
 export(normal_prior)
 export(poisson_prior)
+export(treatment_details)
 export(uniform_prior)
 export(weib_ph_surv_dist)
 exportClasses(Prior)
