--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(beta_prior)
 export(borrowing_details)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
