--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,21 +50,23 @@ Collate:
     'prior_class.R'
     'covariate_class.R'
     'add_covariates.R'
+    'outcome_class.R'
+    'normal_prior.R'
+    'treatment_class.R'
+    'borrowing_class.R'
+    'analysis_class.R'
     'bernoulli_prior.R'
     'beta_prior.R'
-    'borrowing_class.R'
     'borrowing_details.R'
     'cauchy_prior.R'
     'cmdstan.R'
-    'outcome_class.R'
+    'create_analysis_obj.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
     'logistic_bin_outcome.R'
-    'normal_prior.R'
     'package.R'
     'poisson_prior.R'
-    'treatment_class.R'
     'treatment_details.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
