--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -8,11 +8,11 @@ SECURITY.md
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^_pkgdown\.yml$
-^vignettes/hello\.Rmd$
 ^docs$
 ^\.github$
 README.*
 ^\.lintr$
+^\.prettierignore$
 ^staged_dependencies\.yaml$
 coverage.*
 ^\.pre-commit-config\.yaml$
