--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Depends:
     R (>= 3.5.0)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+Config/testthat/edition: 3
 Imports:
    cmdstanr,
    checkmate,
@@ -43,6 +44,7 @@ Imports:
    graphics
 Suggests:
    testthat (>= 3.0),
+   vdiffr,
    xml2
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
