--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(beta_prior)
 export(borrowing_details)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(create_data_matrix)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
@@ -20,3 +21,5 @@ import(checkmate)
 import(cmdstanr)
 importFrom(methods,is)
 importFrom(methods,new)
+importFrom(stats,formula)
+importFrom(stats,model.matrix)
