--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(weib_ph_surv_dist)
 exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
+importFrom(graphics,plot)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
