fix namespace warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,10 @@ export(weib_ph_surv_dist)
 exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
+importFrom(graphics,lines)
+importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
