--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(exponential_prior)
 export(gamma_prior)
 export(logistic_bin_outcome)
 export(normal_prior)
+export(plot)
 export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
@@ -20,9 +21,11 @@ export(weib_ph_surv_dist)
 exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
+importFrom(graphics,axis)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(graphics,rect)
 importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
