14 Summary methods for priors (#25)
* Simple summary methods for priors

* add glue helper

* add parameters and constraints to prior summary methods

adds tests with snapshots

* remove h_glue docs

* create plot method for "Prior" and split summary method

* add plot methods for all priors

* update tests

* remove plot code

* fix namespace warning

* add docs

* fix up plot_pmf

* update snapshots

* fix check errors for docs

* change summary to show

* update tests and show snapshots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ export(exponential_prior)
 export(gamma_prior)
 export(logistic_bin_outcome)
 export(normal_prior)
+export(plot)
+export(plot_pdf)
+export(plot_pmf)
 export(poisson_prior)
 export(treatment_details)
 export(uniform_prior)
@@ -18,5 +21,12 @@ export(weib_ph_surv_dist)
 exportClasses(Prior)
 import(checkmate)
 import(cmdstanr)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,rect)
+importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
+importFrom(methods,show)
