--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,13 +34,18 @@ Depends:
     R (>= 3.5.0)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+Config/testthat/edition: 3
 Imports:
    cmdstanr,
    checkmate,
    glue,
-   methods
+   methods,
+   stats,
+   graphics,
+   grDevices
 Suggests:
    testthat (>= 3.0),
+   vdiffr,
    xml2
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
@@ -60,6 +65,8 @@ Collate:
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
+    'generics.R'
+    'helpers.R'
     'logistic_bin_outcome.R'
     'normal_prior.R'
     'package.R'
