--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,6 +63,7 @@ Collate:
     'borrowing_details.R'
     'cauchy_prior.R'
     'cmdstan.R'
+    'create_analysis_obj.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
