basic input checks complete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(beta_prior)
 export(borrowing_details)
 export(cauchy_prior)
 export(check_cmdstanr)
+export(check_data_matrix_has_columns)
 export(create_analysis_obj)
 export(exp_surv_dist)
 export(exponential_prior)
@@ -30,3 +31,4 @@ importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
+importFrom(stats,complete.cases)
