--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,7 +65,7 @@ Collate:
     'cauchy_prior.R'
     'cmdstan.R'
     'create_analysis_obj.R'
-    'data_matrix.R'
+    'create_data_matrix.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
