--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(cauchy_prior)
 export(check_cmdstanr)
 export(check_data_matrix_has_columns)
 export(create_analysis_obj)
+export(create_data_matrix)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
@@ -32,3 +33,5 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(stats,complete.cases)
+importFrom(stats,formula)
+importFrom(stats,model.matrix)
