make_model_string_functions()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -74,7 +74,7 @@ Collate:
     'helpers.R'
     'logistic_bin_outcome.R'
     'make_model_string_data.R'
-    'make_stan_tte.R'
+    'make_model_string_functions.R'
     'package.R'
     'poisson_prior.R'
     'treatment_details.R'
