--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,6 +75,7 @@ Collate:
     'logistic_bin_outcome.R'
     'make_model_string_data.R'
     'make_model_string_functions.R'
+    'make_model_string_parameters.R'
     'package.R'
     'poisson_prior.R'
     'treatment_details.R'
