--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,6 +76,7 @@ Collate:
     'make_model_string_data.R'
     'make_model_string_functions.R'
     'make_model_string_parameters.R'
+    'make_model_string_transf_params.R'
     'package.R'
     'poisson_prior.R'
     'treatment_details.R'
