work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(logistic_bin_outcome)
+export(mcmc_sample)
 export(normal_prior)
 export(plot)
 export(plot_pdf)
