add get_vars and stan_code (#70)
* add get_vars and stan_code

* remove get_stan_code

* use in check_data_matrix_has_cols

* fix error messages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(create_data_matrix)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
+export(get_vars)
 export(logistic_bin_outcome)
 export(normal_prior)
 export(plot)
