Interpolate model matrix string (#60)
* move check_data_matrix() to own file and don't export

* trim_data_matrix()

* make_model_string_data()

* make_model_string_functions()

* make_model_string_parameters()

* make_model_string_trasnf_params()

* make_model_string_model()

* Compile Stan models, QC updates

* fix recurrent typo

* remove `:::` in package code

* roll back roxygen2 version

* use get_vars in trim_data_matrix()

* change prior glue

* add constraints

* add links to docs

* fix docs error

Co-authored-by: gravesti <isaac.gravestock@roche.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,8 +73,14 @@ Collate:
     'gamma_prior.R'
     'helpers.R'
     'logistic_bin_outcome.R'
+    'make_model_string_data.R'
+    'make_model_string_functions.R'
+    'make_model_string_model.R'
+    'make_model_string_parameters.R'
+    'make_model_string_transf_params.R'
     'package.R'
     'poisson_prior.R'
     'treatment_details.R'
+    'trim_data_matrix.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
