--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,10 +42,11 @@ Imports:
    methods,
    graphics
 Suggests:
-   survival,
-   testthat (>= 3.0),
-   vdiffr,
-   xml2
+    survival,
+    testthat (>= 3.0),
+    usethis (>= 2.1.5),
+    vdiffr,
+    xml2
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
@@ -68,6 +69,7 @@ Collate:
     'cmdstan.R'
     'create_analysis_obj.R'
     'create_data_matrix.R'
+    'data.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
     'gamma_prior.R'
@@ -85,3 +87,4 @@ Collate:
     'trim_data_matrix.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
+LazyData: true
