--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,6 +80,7 @@ Collate:
     'make_model_string_model.R'
     'make_model_string_parameters.R'
     'make_model_string_transf_params.R'
+    'mcmc_sample.R'
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
