--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(exponential_prior)
 export(gamma_prior)
 export(get_vars)
 export(logistic_bin_outcome)
+export(mcmc_sample)
 export(normal_prior)
 export(plot)
 export(plot_pdf)
@@ -22,6 +23,7 @@ export(poisson_prior)
 export(treatment_details)
 export(uniform_prior)
 export(weib_ph_surv_dist)
+exportMethods(mcmc_sample)
 import(checkmate)
 import(cmdstanr)
 importFrom(graphics,axis)
