--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,10 @@ export(plot)
 export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
+export(rename_draws_covariates)
 export(treatment_details)
 export(uniform_prior)
+export(variable_dictionary)
 export(weib_ph_surv_dist)
 exportMethods(mcmc_sample)
 import(checkmate)
