add setNames to imports and fix tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,3 +40,4 @@ importFrom(methods,show)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
 importFrom(stats,model.matrix)
+importFrom(stats,setNames)
