91 helper to rename variables (#92)
* add rename covariates

* add helpers

* rename `x` arg to `analysis_obj` for consistency

* draws updates'

* use dictionary for renaming

* fix stan variable name

* add setNames to imports and fix tests

Co-authored-by: Matt <secrestm@gene.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,10 @@ export(plot)
 export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
+export(rename_draws_covariates)
 export(treatment_details)
 export(uniform_prior)
+export(variable_dictionary)
 export(weib_ph_surv_dist)
 exportMethods(mcmc_sample)
 import(checkmate)
@@ -38,3 +40,4 @@ importFrom(methods,show)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
 importFrom(stats,model.matrix)
+importFrom(stats,setNames)
