--- a/.github/workflows/roxygen.yaml
+++ b/.github/workflows/roxygen.yaml
@@ -65,11 +65,12 @@ jobs:
           path: ~/.staged.dependencies
 
       - name: Run Staged dependencies 🎦
-        uses: insightsengineering/staged-dependencies-action@v1
+        uses: insightsengineering/staged-dependencies-action@1d3d7b1374162e6bbcc50efed164d4b48f4f7e9e
         with:
           run-system-dependencies: ${{ inputs.install-system-dependencies }}
           path: ${{ github.event.repository.name }}
           enable-check: ${{ inputs.enable-staged-dependencies-check }}
+          quiet: false
         env:
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
           SD_REPO_PATH: ${{ github.event.repository.name }}
