--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -74,10 +74,10 @@ jobs:
         uses: insightsengineering/staged-dependencies-action@v1
         with:
           run-system-dependencies: ${{ inputs.install-system-dependencies }}
+          path: ${{ github.event.repository.name }}
+          enable-check: false
         env:
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-          SD_REPO_PATH: ${{ github.event.repository.name }}
-          SD_ENABLE_CHECK: ${{ inputs.enable-staged-dependencies-check }}
 
       - name: Install R package 🚧
         run: |
