--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -10,12 +10,10 @@ on:
       - ready_for_review
     branches:
       - main
-      - pre-release
       - develop
   push:
     branches:
       - main
-      - pre-release
       - develop
   workflow_dispatch:
 
@@ -23,15 +21,19 @@ jobs:
   audit:
     name: Audit Dependencies 🕵️‍♂️
     uses: insightsengineering/r.pkg.template/.github/workflows/audit.yaml@main
+  r-cmd:
+    name: R CMD Check 🧬
+    uses: insightsengineering/r.pkg.template/.github/workflows/build-check-install.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   coverage:
-    if: github.event_name == 'pull_request'
-    name: Coverage 📔
+    name: Coverage 📔 
     uses: insightsengineering/r.pkg.template/.github/workflows/test-coverage.yaml@main
     secrets:
       REPO_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   linter:
     if: github.event_name == 'pull_request'
-    name: SuperLinter 🦸‍♀️/home/users/beera2/code/Genentech/psborrow2/.github/workflows_old
+    name: SuperLinter 🦸‍♀️
     uses: insightsengineering/r.pkg.template/.github/workflows/linter.yaml@main
   roxygen:
     name: Roxygen 🅾
@@ -51,12 +53,6 @@ jobs:
     if: github.event_name == 'pull_request'
     name: Check URLs 🌐
     uses: insightsengineering/r.pkg.template/.github/workflows/links.yaml@main
-  vbump:
-    name: Version Bump 🤜🤛
-    if: github.event_name == 'push'
-    uses: insightsengineering/r.pkg.template/.github/workflows/version-bump.yaml@main
-    secrets:
-      REPO_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   version:
     name: Version Check 🏁
     uses: insightsengineering/r.pkg.template/.github/workflows/version.yaml@main
@@ -69,3 +65,7 @@ jobs:
     uses: insightsengineering/r.pkg.template/.github/workflows/style.yaml@main
     with:
       auto-update: true
+  grammar:
+    if: github.event_name == 'pull_request'
+    name: Grammar Check 🔤
+    uses: insightsengineering/r.pkg.template/.github/workflows/grammar.yaml@main
