--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -26,6 +26,8 @@ jobs:
     uses: insightsengineering/r.pkg.template/.github/workflows/build-check-install.yaml@main
     secrets:
       REPO_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    env:
+      CMDSTAN_PATH: ~/.cmdstan
   coverage:
     name: Coverage 📔 
     uses: insightsengineering/r.pkg.template/.github/workflows/test-coverage.yaml@main
